litmask/tests/compile/mask_concat_only_cstrs.stderr
error: concat! arguments inside mask! must be string, byte string, or C string literals
 --> tests/compile/mask_concat_only_cstrs.rs:8:19
  |
8 |     let _ = mask!(concat!(c"a", c"b"));
  |                   ^^^^^^
